<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailFragment">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/poster_description"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,1:1.33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"
        tools:text="@string/text_primary" />

    <ImageView
        android:id="@+id/iv_release_date_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/release_date_icon_desc"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintEnd_toStartOf="@+id/tv_release_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_release_date_icon"
        app:layout_constraintEnd_toStartOf="@+id/iv_rating_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_release_date_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_release_date_icon"
        tools:text="@string/text_primary" />

    <ImageView
        android:id="@+id/iv_rating_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rating_icon_description"
        android:src="@drawable/ic_baseline_star_rate_24"
        app:layout_constraintEnd_toStartOf="@+id/tv_rating"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/tv_release_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_rating"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_rating_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_rating_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_rating_icon"
        tools:text="@string/text_primary" />

    <TextView
        android:id="@+id/tv_synopsis"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating"
        tools:text="@string/text_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>